# GeekTrend

./: .gitignore  .impeccable.md  README.en.md  README.md  pyproject.toml
.github/workflows/: pages.yml  snapshot.yml
data/2026/07/13/: 2026-07-13T13-14-01Z.json  2026-07-13T22-07-35+08-00.json
data/2026/07/14/: 2026-07-14T00-18-25+08-00.json  2026-07-14T03-08-00+08-00.json  2026-07-14T04-46-22+08-00.json  2026-07-14T06-42-07+08-00.json  2026-07-14T09-11-23+08-00.json  2026-07-14T12-37-35+08-00.json  2026-07-14T15-42-23+08-00.json  2026-07-14T17-43-02+08-00.json  2026-07-14T19-15-08+08-00.json  2026-07-14T21-00-08+08-00.json  2026-07-14T23-14-29+08-00.json
data/2026/07/15/: 2026-07-15T00-59-03+08-00.json  2026-07-15T02-57-38+08-00.json  2026-07-15T04-47-47+08-00.json  2026-07-15T06-44-11+08-00.json  2026-07-15T09-08-29+08-00.json  2026-07-15T12-37-05+08-00.json  2026-07-15T15-46-25+08-00.json  2026-07-15T17-46-35+08-00.json  2026-07-15T19-19-03+08-00.json  (+2 more)
docs/: USAGE.md
docs/superpowers/plans/: 2026-07-13-github-trending-snapshot.md
docs/superpowers/specs/: 2026-07-13-github-trending-snapshot-design.md
scripts/: build_pages_data.py  publish_snapshot.py
site/: app.js  index.html  styles.css
src/geektrend/: analysis.py  cli.py  client.py  collector.py  model.py  parser.py  writer.py
tests/: test_analysis.py  test_cli.py  test_client.py  test_collector.py  test_lock.py  test_model.py  test_package.py  test_pages_data.py  test_parser.py  test_publish_snapshot.py  test_workflow_contract.py  test_writer.py
tests/fixtures/: empty.html  trending.html
(+95 files in other folders)
