[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geektrend"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = ["beautifulsoup4==4.13.4", "requests==2.32.4"]

[project.scripts]
geektrend = "geektrend.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
